[package]
name = "pong-clone"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Fidder <gabfid@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
